completing services section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h3>Beautician</h3>
                     <a class="nav-item" href="#home">Home</a>
                     <a class="nav-item" href="#about">About</a>
-                    <a class="nav-item" href="#">Services</a>
+                    <a class="nav-item" href="#services">Services</a>
                     <a class="nav-item" href="#">Portfolio</a>
                     <a class="nav-item" href="#">Contacts</a>
                 </div>
@@ -54,18 +54,92 @@
             </header>
     
             <main>
-                <Section id="about">
+                <section id="about">
                     <div class="container">
-                        <div class="row rwo-content m-auto align-items-center">
-                            <div class="col-12 col-lg-6">
-                                <h1>photo</h1>
+                        <div class="row row-content m-auto align-items-center">
+                            <div class="col-12 col-md-6 self-img">
+                                <img class="img-fluid" src="./images/self.jpg" >
                             </div>
-                            <div class="col-12 col-lg-6">
-                                <h1>photo</h1>
+                            <div class="col-12 col-md-6 self-info">
+                                <div class="heading">
+                                    <h6>About me</h6>
+                                    <span></span>
+                                </div>
+                                <div class="bio">
+                                    <h1>About my story</h1>
+                                    <p>
+                                        I am a Angels le lanisa and works in film and media. Works in film and media. A Digital agency media firm is a business.
+                                    </p>
+                                    <p>
+                                        Of one or more experts that provides professional work. The phrasal sequence of the Lorem Ipsum. Media firm is a business 
+                                        of one or more experts that provides professional work. The phrasal sequence of the Lorem Ipsum. The phrasal sequence of the Lorem Ipsum.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </Section>
+                </section>
+
+                <section id="services">
+                    <div class="container">
+                        <div class="row row-content m-auto align-items-center">
+                            <div class="heading">
+                                <span></span>
+                                <h6>Services</h6>
+                                <span></span>
+                            </div>
+                            <h2>Services</h2>
+                            <div class="col-12 col-md-6 col-lg-4 service-card">
+                                <div class="card">
+                                    <div class="card-title">
+                                        <h3>Facial Makeup</h3>
+                                    </div>
+                                    <img src="./images/facial.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 service-card">
+                                <div class="card">
+                                    <div class="card-title">
+                                        <h3>Eye Makeup</h3>
+                                    </div>
+                                    <img src="./images/eye.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 service-card">
+                                <div class="card">
+                                    <div class="card-title">
+                                        <h3>Hair Styling</h3>
+                                    </div>
+                                    <img src="./images/hair.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 service-card">
+                                <div class="card">
+                                    <div class="card-title">
+                                        <h3>Wedding Makeup</h3>
+                                    </div>
+                                    <img src="./images/wedding.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 service-card">
+                                <div class="card">
+                                    <div class="card-title">
+                                        <h3>Fashion Makeup</h3>
+                                    </div>
+                                    <img src="./images/fashion.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 service-card">
+                                <div class="card">
+                                    <div class="card-title">
+                                        <h3>Enents Makeup</h3>
+                                    </div>
+                                    <img src="./images/enents.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
 
