completed basic structure of portfolio section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Krati Singh Solanki</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./resource/bootstrap.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="./sass/style.css" >
     </head>
@@ -19,8 +20,8 @@
                     <a class="nav-item" href="#home">Home</a>
                     <a class="nav-item" href="#about">About</a>
                     <a class="nav-item" href="#services">Services</a>
-                    <a class="nav-item" href="#">Portfolio</a>
-                    <a class="nav-item" href="#">Contacts</a>
+                    <a class="nav-item" href="#portfolio">Portfolio</a>
+                    <a class="nav-item" href="#contact">Contacts</a>
                 </div>
             </div>
             <div class="container nav-box">
@@ -58,7 +59,7 @@
                     <div class="container">
                         <div class="row row-content m-auto align-items-center">
                             <div class="col-12 col-md-6 self-img">
-                                <img class="img-fluid" src="./images/self.jpg" >
+                                <img class="img-fluid my-img" src="./images/self.jpg" >
                             </div>
                             <div class="col-12 col-md-6 self-info">
                                 <div class="heading">
@@ -88,7 +89,7 @@
                                 <h6>Services</h6>
                                 <span></span>
                             </div>
-                            <h2>Services</h2>
+                            <h1>Services</h1>
                             <div class="col-12 col-md-6 col-lg-4 service-card">
                                 <div class="card">
                                     <div class="card-title">
@@ -132,9 +133,59 @@
                             <div class="col-12 col-md-6 col-lg-4 service-card">
                                 <div class="card">
                                     <div class="card-title">
-                                        <h3>Enents Makeup</h3>
+                                        <h3>Pedicure & Manicure</h3>
                                     </div>
-                                    <img src="./images/enents.jpg" class="card-img" alt="...">
+                                    <img src="./images/pedicure.jpg" class="card-img" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <section id="portfolio">
+                    <div class="container">
+                        <div class="row row-content m-auto align-items-center">
+                            <div class="heading">
+                                <span></span>
+                                <h6>gallery</h6>
+                                <span></span>
+                            </div>
+                            <h1>my portfolio</h1>
+
+                            <div class="col-12 col-md-6 col-lg-4 gallery-card">
+                                <div class="card">
+                                    <img src="./images/gallery1.jpg" class="card-img" alt="...">
+                                    <i class="material-icons search-icon">zoom_in</i>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 gallery-card">
+                                <div class="card">
+                                    <img src="./images/gallery3.jpg" class="card-img" alt="...">
+                                    <i class="material-icons search-icon">zoom_in</i>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 gallery-card">
+                                <div class="card">
+                                    <img src="./images/gallery4.jpg" class="card-img" alt="...">
+                                    <i class="material-icons search-icon">zoom_in</i>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 gallery-card">
+                                <div class="card">
+                                    <img src="./images/gallery5.jpg" class="card-img" alt="...">
+                                    <i class="material-icons search-icon">zoom_in</i>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 gallery-card">
+                                <div class="card">
+                                    <img src="./images/gallery6.jpg" class="card-img" alt="...">
+                                    <i class="material-icons search-icon">zoom_in</i>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-4 gallery-card">
+                                <div class="card">
+                                    <img src="./images/gallery7.jpg" class="card-img" alt="...">
+                                    <i class="material-icons search-icon">zoom_in</i>
                                 </div>
                             </div>
                         </div>
