--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                         <h5>Makeup Artist & Beautician</h5>
                         <h1>Krati Solanki</h1>
                     </div>
-                    <div class="btn-container">
+                    <a href="#contact" class="btn-container">
                         <button type="button" class="btn">
                             <span>contact me</span>
                         </button>
-                    </div>
+                    </a>
                     <div class="">
 
                     </div>
