--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="container">
                 <div class="row row-content m-auto justify-content-center">
                     <div class="col-12 col-md-4 row justify-content-center align-items-center">
-                        <img src="./images/self2.png" alt="..." class="img-fluid self-2" >
+                        <img src="./images/self2.PNG" alt="..." class="img-fluid self-2" >
                     </div>
                     <div class="col-12 col-md-4 mb-3">
                         <h3>Krati Solanki</h3>
