--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                    <img src="" alt="..." id="modal-img" class="img-fluid" >
+                                    <img id="modal-img" class="img-fluid" alt="..." >
                                 </div>
                             </div>
                         </div>
